--- a/src/ZectranetBundle/Resources/views/officeProfile.html.twig
+++ b/src/ZectranetBundle/Resources/views/officeProfile.html.twig
@@ -45,7 +45,7 @@
                         </ul>
                     </h5>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h5>
                         <label>Skils Avaible : </label>
                         <ul>
@@ -56,6 +56,16 @@
                             <li>Accembler</li>
                         </ul>
                     </h5>
+                </div>
+
+
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-1">
+                    <a class="btn btn-default" href="{{ path('zectranet_get_edit_office_profile',{'office_id': office.id } ) }}"> OfficeEditProfile</a>
                 </div>
             </div>
         </div>
