--- a/src/ZectranetBundle/Resources/views/homeOffice.html.twig
+++ b/src/ZectranetBundle/Resources/views/homeOffice.html.twig
@@ -33,9 +33,12 @@
                         <p>
                             <label style="width: 100%;">
                                 Project name:
-                                <input class="form-control" name="name" type="text"/>
+                                <input class="form-control" name="name" ng-model="projectName"  type="text"/>
                             </label>
                         </p>
+                        <div ng-if="homeOfficeInputs.projectNameError == true">
+                            <span  class="label label-danger"> Please fill out this field </span>
+                        </div>
                         <p>
                             <label style="width: 100%;">
                                 Project template:
@@ -47,9 +50,8 @@
                                 </select>
                             </label>
                         </p>
-                        <hr/>
-                        <p align="right">
-                            <button class="btn btn-default">Create</button>
+                        <p align="right" ng-if="projectName != ''">
+                            <button class="btn btn-default" ng-click="testInputs(projectName)">Create</button>
                         </p>
                     </form>
                 </li>
@@ -130,14 +132,14 @@
                     </div>
                     <div class="list-group-item">
                         <form class="input-group input-group-lg">
-                            <textarea id="textarea-post"  name="message" class="form-control" rows="3" style="resize: vertical; font-size: 11px; height: 65px;" ng-model="message"></textarea>
+                            <textarea id="textarea-post"  name="message" class="form-control" rows="3"  style="resize: vertical; font-size: 11px; height: 65px;" ng-model="message"></textarea>
+
                             <span class="input-group-btn">
                                 <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendConversationMessage(message,conversation.id)">
                                     <span>Post</span>
                                 </button>
                             </span>
                         </form>
-
                     </div>
                 </div>
             </div>
