--- a/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
@@ -119,8 +119,9 @@
                                     <label>
                                         <b>Request Message</b>
                                     </label>
-                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="HO_contact_message"></textarea>
+                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="HO_contact_message" required></textarea>
                                     <br/>
+
                                 </div>
                             </div>
                         </div>
@@ -154,8 +155,9 @@
                                     <label>
                                         <b>Request Message</b>
                                     </label>
-                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="All_contact_message"></textarea>
+                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="All_contact_message" required></textarea>
                                     <br/>
+
                                 </div>
                             </div>
                         </div>
