--- a/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
@@ -110,7 +110,7 @@
                                     <label class="control-label">
                                         Thread keywords:
                                     </label>
-                                    <input type="text" class="form-control" name="keywords">
+                                    <input type="text" class="form-control" name="keywords" required>
                                 </div>
 
                                 <div class="form-group">
