--- a/src/ZectranetBundle/Resources/views/QnAForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAForum.html.twig
@@ -10,12 +10,17 @@
 {% endblock %}
 
 {% block body %}
-    <div class="page-header">
+
+    <div class="page-header" id="notSelect">
         <div class="row">
             <div class="col-md-10" style="word-wrap: break-word; white-space: normal;">
-                <span style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold;">
-                    {{ forum.name }}
-                </span>
+                <div ng-click="setFormEdit()" ng-mouseleave="setFormNone()" style="display: inline-block;">
+                    <span ng-if="formStatus == 'formNone'" id="spanLength" style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold; padding: 0 5px;">{{ forum.name }}</span>
+                    <form ng-class="formStatus" action="{{ path('zectranet_QnA_forum_edit_name', {'project_id' : forum.id}) }}" method="post">
+                        <input ng-focus="setFocus()" ng-blur="setBlure()" type="text" value="{{ forum.name }}" name="newName" class="form-control" style="height: 42px;" required>
+                        <input type="submit" class="hidden">
+                    </form>
+                </div>
             </div>
             <div class="col-md-2">
                 {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
