--- a/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Forum Settings{% endblock %}
 
 {% block body %}
-    <div ng-controller="HeaderForumController" ng-init="getHeaders();">
+    <div ng-controller="HeaderForumController" >
         <div class="row">
             <ol class="breadcrumb">
                 <li>
@@ -80,9 +80,10 @@
                                     </td>
                                     <td>
                                        <span class="label" style="background-color: [[ request.status.color ]]">[[ request.status.label ]]</span>
+                                       {#<span  class="label" style="background-color: [[ request.status.color ]]">[[ request.status.label ]]</span>#}
                                     </td>
                                     <td>
-                                        <span class="label" style="background-color: #337ab7;cursor: pointer;" ng-click="reSendRequest(request)">
+                                        <span  class="label" style="background-color: #337ab7;cursor: pointer;" ng-click="reSendRequest(request)">
                                             Re-Send
                                         </span>
                                     </td>
@@ -119,7 +120,11 @@
                                     <label>
                                         <b>Request Message</b>
                                     </label>
-                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="HO_contact_message"></textarea>
+                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;"
+                                               ng-model="HO_contact_message"
+                                            ng-init="HO_contact_message = '{{ app.user.username ~', has invited you to join ' ~   forum.name }}'">
+
+                                    </textarea>
                                     <br/>
                                     <div ng-if="headerForumSettingsErrors.HO_Contact_message_Error == true">
                                         <span  class="label label-danger"> Please fill out this field </span>
@@ -157,7 +162,11 @@
                                     <label>
                                         <b>Request Message</b>
                                     </label>
-                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="All_contact_message"></textarea>
+                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;"
+                                               ng-model="All_contact_message"
+                                               ng-init="All_contact_message = '{{ app.user.username ~', has invited you to join ' ~   forum.name }}'">
+
+                                    </textarea>
                                     <br/>
                                     <div ng-if="headerForumSettingsErrors.All_Contact_message_Error == true">
                                         <span  class="label label-danger"> Please fill out this field </span>
