--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -161,34 +161,34 @@
     {% endfor %}
 
     <div class="col-md-12 coments-main">
-        <div class="row">
-        <form>
-            <textarea ng-change="comentEmpty()" ng-model="comentText" ng-focus="comentButtonFocus()" ng-blur="comentButtonUnFocus()" class="form-control coments-textarea" placeholder="Coment"></textarea>
+        <form action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">
 
-            <button ng-class="comentButtonActive" ng-if="comentButton" type="submit" class="btn btn-default btn-primary">
+            <textarea name="message" ng-change="comentEmpty()" ng-model="comentText" ng-focus="comentButtonFocus()" ng-blur="comentButtonUnFocus()" class="form-control coments-textarea" placeholder="Here is your answer"></textarea>
+
+            <button type="submit" style="margin-top: 10px;" ng-class="comentButtonActive" ng-if="comentButton" class="btn btn-default btn-primary">
                 Answer
             </button>
 
         </form>
-        </div>
+
 
     </div>
 
 
-    <div class="row" style="margin-top: 10px;">
-        <div class="col-md-12">
-            <form action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">
-                <div class="input-group">
-                    <textarea style="resize: vertical;" name="message" class="form-control"></textarea>
-                    <div class="input-group-addon" style="padding: 0;">
-                        <button type="submit" class="btn btn-default btn-primary" style="width: 72px; height: 72px;">
-                            Answer
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
+    {#<div class="row" style="margin-top: 10px;">#}
+        {#<div class="col-md-12">#}
+            {#<form action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">#}
+                {#<div class="input-group">#}
+                    {#<textarea style="resize: vertical;" name="message" class="form-control"></textarea>#}
+                    {#<div class="input-group-addon" style="padding: 0;">#}
+                        {#<button type="submit" class="btn btn-default btn-primary" style="width: 72px; height: 72px;">#}
+                            {#Answer#}
+                        {#</button>#}
+                    {#</div>#}
+                {#</div>#}
+            {#</form>#}
+        {#</div>#}
+    {#</div>#}
 
 
 
